# vectorbt-backtester

./: README.md
vectorbt_backtester_github/: LICENSE  PROJECT_TREE.txt  README.md  __init__.py  backtester.py  config.py  context.py  context_splitter.py  main.py  pyproject.toml  requirements.txt  results_analyzer.py  strategies.py  utils.py  validator.py  walkforward.py
vectorbt_backtester_github/results/: best_strategies_global.csv  worst_strategies_global.csv
