[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vectorbt-backtester"
version = "0.1.0"
description = "Backtesting utilities built on vectorbt with walk-forward validation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [{name="Kousseila AZNI"}]

[tool.setuptools]
py-modules = []  # using loose modules at repo root

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
